# depth_estimation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml  python-publish.yml  slow-tests.yml  test.yml
docs/: adding_a_model.md  cli.md  data.md  dependencies.md  evaluation.md  export.md  models.md  pipeline.md  pruning.md  quantization.md  release_notes.md  training.md  video.md  viz.md
examples/: demo_all.py  eval_diode.py  eval_kitti.py  eval_nyu.py  optimize.py  test_finetuned.py  train_depth_anything.py  webcam_depth.py
src/depth_estimation/: __init__.py  cli.py  configuration_utils.py  export.py  losses.py  modeling_utils.py  output.py  pipeline_utils.py  processing_utils.py  pruning.py  quantization.py  registry.py  trainer.py  training_args.py  video.py
src/depth_estimation/data/: __init__.py  base_dataset.py  diode.py  folder.py  hub.py  kitti.py  nyu_depth_v2.py  transforms.py
src/depth_estimation/evaluation/: __init__.py  evaluate.py  metrics.py  profiling.py
src/depth_estimation/models/: __init__.py
src/depth_estimation/models/auto/: __init__.py  modeling_auto.py  processing_auto.py
src/depth_estimation/models/depth_anything_v1/: __init__.py  configuration_depth_anything_v1.py  modeling_depth_anything_v1.py
src/depth_estimation/models/depth_anything_v2/: __init__.py  configuration_depth_anything_v2.py  modeling_depth_anything_v2.py
src/depth_estimation/models/depth_anything_v3/: __init__.py  configuration_depth_anything_v3.py  modeling_depth_anything_v3.py
src/depth_estimation/models/depth_fm/: __init__.py  configuration_depth_fm.py  modeling_depth_fm.py
src/depth_estimation/models/depth_pro/: __init__.py  configuration_depth_pro.py  modeling_depth_pro.py
src/depth_estimation/models/marigold_dc/: __init__.py  configuration_marigold_dc.py  modeling_marigold_dc.py
src/depth_estimation/models/midas/: __init__.py  configuration_midas.py  modeling_midas.py
src/depth_estimation/models/moge/: __init__.py  configuration_moge.py  modeling_moge.py
src/depth_estimation/models/omnivggt/: __init__.py  configuration_omnivggt.py  modeling_omnivggt.py
src/depth_estimation/models/pixel_perfect_depth/: __init__.py  configuration_ppd.py  modeling_ppd.py
src/depth_estimation/models/vggt/: __init__.py  configuration_vggt.py  modeling_vggt.py
src/depth_estimation/models/zoedepth/: __init__.py  configuration_zoedepth.py  modeling_zoedepth.py
src/depth_estimation/pipelines/: __init__.py  depth_estimation.py
src/depth_estimation/viz/: __init__.py  animate.py  composite.py  display.py  error.py
tests/: test_auto.py  test_cli.py  test_config.py  test_data.py  test_evaluation.py  test_export_onnx.py  test_inference_all_models.py  test_inference_image.py  test_losses.py  test_model.py  test_package.py  test_packaging.py  test_pipeline.py  test_processor.py  test_pruning.py  test_quantization.py  test_training.py  test_transforms.py  test_video.py  test_viz.py
