[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depth_estimation"
version = "0.0.3"
authors = [
    { name = "shriarul5273" },
]
description = "A Transformers-style Python library for monocular depth estimation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
keywords = ["depth-estimation", "monocular-depth", "computer-vision", "deep-learning", "pytorch"]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "Pillow>=9.0",
    "numpy>=1.24",
    "matplotlib>=3.6",
    "opencv-python>=4.8",
    "huggingface-hub>=0.16",
    "transformers>=4.30",
    "diffusers>=0.25",
    "einops>=0.6",
    "torchdiffeq>=0.2",
]

[project.urls]
Homepage = "https://github.com/shriarul5273/depth_estimation"
Repository = "https://github.com/shriarul5273/depth_estimation"
Issues = "https://github.com/shriarul5273/depth_estimation/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
da3 = [
    "depth-anything-3",
]
depth-pro = [
    "depth-pro",
]
ppd = [
    "ppd",
    "moge",
]
depthfm = [
    "depthfm",
    "torchdiffeq",
    "einops",
    "diffusers",
]
marigold-dc = [
    "diffusers>=0.25",
]
all = [
    "depth_estimation[da3,depth-pro,ppd,depthfm,marigold-dc]",
]

[tool.setuptools.packages.find]
where = ["src"]
